--- a/app/assets/javascripts/router.js.erb
+++ b/app/assets/javascripts/router.js.erb
@@ -14,18 +14,17 @@
   }
 %>
 
+var router = {};
 function generateRoutes(){
   var routes = <%= routes.to_json %>;
-  var r = {};
   routes.forEach(function(route){
-    r[route.alias + '_path'] = function(){
+    router[route.alias + '_path'] = function(){
       var args = [].slice.call(arguments,0);
       return route.path.replace(/(\:[\w_]+)/g, function(m){
         return args.shift();
       });
     }
   });
-  return r;
 }
 
-var router = generateRoutes();
+generateRoutes();
